14.09. fix contacts block (delete gap between elements)

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -216,6 +216,7 @@
           padding-top: 0;
           padding-bottom: 0;
           gap: pxToRem(5);
+          flex: 1 1 60%;
         }
 
         @include desktop {
@@ -255,14 +256,11 @@
         bottom: 0;
 
         @include tablet {
-          width: fit-content;
+          width: 100%;
           position: static;
           display: flex;
-          gap: pxToRem(15);
-        }
-
-        @include desktop {
-          gap: pxToRem(35);
+          flex: 1 1 40%;
+          justify-content: space-between;
         }
       }
 
